--- a/res/layout/activity_ello_share.xml
+++ b/res/layout/activity_ello_share.xml
@@ -11,8 +11,8 @@
     <ImageView
         android:id="@+id/photoImageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.74"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:adjustViewBounds="true"
         android:maxHeight="1024dp"
         android:maxWidth="1024dp"
@@ -20,7 +20,7 @@
 
     <Button
         android:id="@+id/shareButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Share" />
 
