--- a/app/src/main/res/layout/activity_ello_share.xml
+++ b/app/src/main/res/layout/activity_ello_share.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ripple="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -8,17 +9,63 @@
     tools:context="com.weatherlight.elloshare.ElloShareActivity"
     tools:ignore="MergeRootFrame" >
 
-    <ImageView
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <ImageView
         android:id="@+id/photoImageView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+            android:layout_height="match_parent"
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:maxHeight="1024dp"
         android:maxWidth="1024dp"
         android:src="@drawable/ic_launcher" />
 
-        <View
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/tag"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:alpha="0"
+                android:background="@drawable/rounded_edit_text"
+                android:hint="@string/add_caption"
+                android:imeOptions="actionDone"
+                android:paddingLeft="10dp" />
+
+            <com.andexert.library.RippleView
+                android:id="@+id/fab"
+                android:layout_width="?android:actionBarSize"
+                android:layout_height="?android:actionBarSize"
+                android:layout_margin="5dp"
+                android:onClick="toggleTaggingBox"
+                ripple:rv_centered="true">
+
+                <ImageView
+                    android:id="@+id/tagButton"
+                    android:layout_width="?android:actionBarSize"
+                    android:layout_height="?android:actionBarSize"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/circle"
+                    android:elevation="3dip"
+                    android:padding="10dp"
+                    android:src="@android:drawable/ic_menu_edit" />
+
+            </com.andexert.library.RippleView>
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <View
             android:layout_width="match_parent"
             android:layout_height="4dip"
             android:layout_marginBottom="4dip"
@@ -26,10 +73,10 @@
             android:background="?android:attr/dividerHorizontal" />
 
     <Button
-		android:background="?android:attr/selectableItemBackground"
         android:id="@+id/shareButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
         android:text="Share" />
 
 </LinearLayout>
