--- a/app/src/main/res/layout/activity_image_picker.xml
+++ b/app/src/main/res/layout/activity_image_picker.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.weatherlight.elloshare.ImagePickerActivity" >
+    tools:context="com.weatherlight.elloshare.ImagePickerActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,22 +33,25 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" >
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <ImageButton
             android:id="@+id/imageButton1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@drawable/circle"
             android:contentDescription="@string/open_image_picker"
             android:gravity="center_vertical"
-            android:src="@android:drawable/ic_menu_gallery" 
-            android:onClick="onImagePickerClicked"/>
+            android:onClick="onImagePickerClicked"
+            android:padding="10dp"
+            android:src="@android:drawable/ic_menu_gallery" />
 
         <requestFocus />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
             android:gravity="center_vertical|start"
             android:text="@string/image_picker_caption" />
     </LinearLayout>
