--- a/app/src/main/res/layout/activity_image_picker.xml
+++ b/app/src/main/res/layout/activity_image_picker.xml
@@ -35,7 +35,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <ImageButton
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/imageButton1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
